--- a/src/MEGASync/gui/ui/CrashReportDialog.ui
+++ b/src/MEGASync/gui/ui/CrashReportDialog.ui
@@ -34,6 +34,9 @@
   <property name="styleSheet">
    <string notr="true"/>
   </property>
+  <property name="TOKENIZED" stdset="0">
+   <bool>true</bool>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_5">
    <property name="spacing">
     <number>24</number>
