--- a/src/MEGASync/gui/ui/RemoveSyncConfirmationDialog.ui
+++ b/src/MEGASync/gui/ui/RemoveSyncConfirmationDialog.ui
@@ -39,6 +39,9 @@ max-height: 96px;
 }
 </string>
   </property>
+  <property name="TOKENIZED" stdset="0">
+   <bool>true</bool>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -95,7 +98,7 @@ max-height: 96px;
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
-        <enum>Qt::Orientation::Horizontal</enum>
+        <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
