--- a/src/MEGASync/syncs/gui/Backups/ui/RemoveBackupDialog.ui
+++ b/src/MEGASync/syncs/gui/Backups/ui/RemoveBackupDialog.ui
@@ -73,6 +73,9 @@ font-size:12px;
 color: rgba(0, 0, 0, 0.2)
 }</string>
   </property>
+  <property name="TOKENIZED" stdset="0">
+   <bool>true</bool>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
     <number>10</number>
@@ -246,10 +249,10 @@ color: rgba(0, 0, 0, 0.2)
      <item>
       <spacer name="verticalSpacer">
        <property name="orientation">
-        <enum>Qt::Orientation::Vertical</enum>
+        <enum>Qt::Vertical</enum>
        </property>
        <property name="sizeType">
-        <enum>QSizePolicy::Policy::Fixed</enum>
+        <enum>QSizePolicy::Fixed</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
@@ -288,7 +291,7 @@ color: rgba(0, 0, 0, 0.2)
      <item>
       <spacer name="verticalSpacer_2">
        <property name="orientation">
-        <enum>Qt::Orientation::Vertical</enum>
+        <enum>Qt::Vertical</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
@@ -303,10 +306,10 @@ color: rgba(0, 0, 0, 0.2)
    <item>
     <widget class="Line" name="line">
      <property name="frameShadow">
-      <enum>QFrame::Shadow::Plain</enum>
+      <enum>QFrame::Plain</enum>
      </property>
      <property name="orientation">
-      <enum>Qt::Orientation::Horizontal</enum>
+      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
@@ -321,7 +324,7 @@ color: rgba(0, 0, 0, 0.2)
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
-        <enum>Qt::Orientation::Horizontal</enum>
+        <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
