--- a/src/MEGASync/gui/ui/AccountDetailsDialog.ui
+++ b/src/MEGASync/gui/ui/AccountDetailsDialog.ui
@@ -344,6 +344,9 @@ min-width:219px;
   <property name="modal">
    <bool>false</bool>
   </property>
+  <property name="TOKENIZED" stdset="0">
+   <bool>true</bool>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_6" stretch="0,1">
    <item>
     <widget class="QGroupBox" name="headerBox">
