--- a/src/MEGASync/gui/ui/SettingsDialog.ui
+++ b/src/MEGASync/gui/ui/SettingsDialog.ui
@@ -233,6 +233,9 @@ margin-top: 3px;
 margin-bottom: 3px;
 }</string>
   </property>
+  <property name="TOKENIZED" stdset="0">
+   <bool>true</bool>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <property name="leftMargin">
     <number>24</number>
