Answer MR comments

--- a/src/MEGASync/gui/ui/BandwidthSettings.ui
+++ b/src/MEGASync/gui/ui/BandwidthSettings.ui
@@ -37,6 +37,9 @@
   <property name="styleSheet">
    <string notr="true"/>
   </property>
+  <property name="TOKENIZED" stdset="0">
+   <bool>true</bool>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_5">
    <property name="spacing">
     <number>0</number>
