--- a/src/MEGASync/gui/ui/BugReportDialog.ui
+++ b/src/MEGASync/gui/ui/BugReportDialog.ui
@@ -47,6 +47,9 @@ font-weight: 600;
 
 </string>
   </property>
+  <property name="TOKENIZED" stdset="0">
+   <bool>true</bool>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_4">
    <property name="spacing">
     <number>5</number>
@@ -177,7 +180,7 @@ font-weight: 600;
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
-         <enum>Qt::Orientation::Horizontal</enum>
+         <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
