--- a/src/MEGASync/gui/ui/ProxySettings.ui
+++ b/src/MEGASync/gui/ui/ProxySettings.ui
@@ -40,6 +40,9 @@
 	image: url(:/images/banner/error.svg);
 }</string>
   </property>
+  <property name="TOKENIZED" stdset="0">
+   <bool>true</bool>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <property name="spacing">
     <number>24</number>
