--- a/src/MEGASync/gui/ui/ChangePassword.ui
+++ b/src/MEGASync/gui/ui/ChangePassword.ui
@@ -28,6 +28,9 @@
   <property name="styleSheet">
    <string notr="true"/>
   </property>
+  <property name="TOKENIZED" stdset="0">
+   <bool>true</bool>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1,0">
    <property name="spacing">
     <number>12</number>
