--- a/src/MEGASync/stalled_issues/gui/stalled_issues_cases/ui/LocalAndRemoteDifferentWidget.ui
+++ b/src/MEGASync/stalled_issues/gui/stalled_issues_cases/ui/LocalAndRemoteDifferentWidget.ui
@@ -14,12 +14,9 @@
    <string notr="true"/>
   </property>
   <property name="styleSheet">
-   <string notr="true">#selectLabel
+   <string notr="true">#LocalAndRemoteDifferentWidget
 {
-    font-family: Lato Bold;
-    font-size: 13px;
-    line-height: 16px;
-    color: #333333;
+background-color: transparent;
 }</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -43,7 +40,6 @@
      <property name="font">
       <font>
        <family>Lato 13</family>
-       <pointsize>-1</pointsize>
        <bold>true</bold>
       </font>
      </property>
@@ -52,6 +48,9 @@
      </property>
      <property name="indent">
       <number>0</number>
+     </property>
+     <property name="type" stdset="0">
+      <string notr="true">primary</string>
      </property>
     </widget>
    </item>
