--- a/src/MEGASync/stalled_issues/gui/ui/StalledIssueHeader.ui
+++ b/src/MEGASync/stalled_issues/gui/ui/StalledIssueHeader.ui
@@ -363,13 +363,13 @@
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>32</height>
+          <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>16777215</width>
-          <height>32</height>
+          <height>16777215</height>
          </size>
         </property>
         <property name="text">
